--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,62 @@
 .App {
-  text-align: center;
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+  .nav-bar {
+    margin: 0px 200px;
+    display: flex;
+    justify-content: space-evenly;
+    a {
+      font-size: 20px;
+    }
+    a:hover {
+      color: grey;
+    }
+  }
+  .product-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    .product {
+      margin: 10px;
+      padding: 15px;
+      // border: 1px solid black;
+      // border-radius: 20px;
+      background-color: #f7f7f7;
+      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+      a {
+        display: flex;
+        width: 300px;
+        height: 200px;
+        img {
+          max-width: 45%;
+          max-height: 80%;
+          margin-right: 10px;
+        }
+        .product-info {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          .title {
+            text-align: center;
+          }
+          .price {
+            font-size: 40px;
+            text-align: right;
+            padding: 0px 10px 10px 0px;
+          }
+        }
+      }
+      a:hover {
+        .title {
+          text-decoration: underline;
+        }
+      }
+      .buttons {
+        display: flex;
+      }
+    }
+  }
 }
