--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,48 +14,67 @@
       color: grey;
     }
   }
-  .product-list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    .product {
-      margin: 10px;
-      padding: 15px;
-      // border: 1px solid black;
-      // border-radius: 20px;
-      background-color: #f7f7f7;
-      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
-      a {
+  .products {
+    .sort-and-filter-container {
+      display: flex;
+      justify-content: space-between;
+      margin: 0px 40px 0px 20px;
+      .sort-options {
         display: flex;
-        width: 300px;
-        height: 200px;
-        img {
-          max-width: 45%;
-          max-height: 80%;
-          margin-right: 10px;
+        align-items: center;
+        select {
+          height: 40%;
         }
-        .product-info {
-          width: 100%;
+      }
+      .filter-options {
+        display: flex;
+        align-items: center;
+      }
+      .search-option {
+        display: flex;
+        align-items: center;
+      }
+    }
+    .product-list {
+      display: flex;
+      flex-wrap: wrap;
+      .product {
+        margin: 10px;
+        padding: 15px;
+        background-color: #f7f7f7;
+        box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+        a {
           display: flex;
-          flex-direction: column;
-          justify-content: space-between;
+          width: 300px;
+          height: 200px;
+          img {
+            max-width: 45%;
+            max-height: 80%;
+            margin-right: 10px;
+          }
+          .product-info {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .title {
+              text-align: center;
+            }
+            .price {
+              font-size: 40px;
+              text-align: right;
+              padding: 0px 10px 10px 0px;
+            }
+          }
+        }
+        a:hover {
           .title {
-            text-align: center;
-          }
-          .price {
-            font-size: 40px;
-            text-align: right;
-            padding: 0px 10px 10px 0px;
+            text-decoration: underline;
           }
         }
-      }
-      a:hover {
-        .title {
-          text-decoration: underline;
+        .buttons {
+          display: flex;
         }
-      }
-      .buttons {
-        display: flex;
       }
     }
   }
