--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,9 @@ body {
 }
 
 .App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   a {
     text-decoration: none;
     color: #000;
@@ -34,6 +37,7 @@ body {
     }
   }
   .home {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,6 +58,7 @@ body {
     }
   }
   .products {
+    flex-grow: 1;
     .sort-and-filter-container {
       background-color: #242f3f;
       color: white;
@@ -135,10 +140,203 @@ body {
     }
   }
   .single-product {
+    flex-grow: 1;
     display: flex;
+    align-items: center;
     background-color: #f7f7f7;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 20px;
     img {
       max-width: 200px;
+    }
+    .product-info {
+      display: grid;
+      grid-template-rows: 25% 25% 20% 30%;
+
+      margin: 20px;
+      min-height: 300px;
+
+      padding: 10px;
+
+      button {
+        align-self: center;
+        border: none;
+        border-radius: 25px;
+        background-color: #ffd814;
+        height: 40px;
+        width: 125px;
+        box-shadow: 3px 3px 5px -3px rgba(0, 0, 0, 0.75);
+      }
+      button:hover {
+        background-color: #f7ca01;
+        cursor: pointer;
+      }
+    }
+  }
+  .cart {
+    flex-grow: 1;
+    .title {
+      text-align: center;
+    }
+    .product-list {
+      margin-left: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      .product {
+        margin: 10px;
+        padding: 15px;
+        background-color: #f7f7f7;
+        box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+        a {
+          display: flex;
+          width: 300px;
+          height: 200px;
+          img {
+            max-width: 45%;
+            max-height: 80%;
+            margin-right: 10px;
+            object-fit: contain;
+          }
+          .product-info {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .title {
+              text-align: center;
+            }
+            .price {
+              font-size: 40px;
+              text-align: right;
+              padding: 0px 10px 10px 0px;
+            }
+          }
+        }
+        a:hover {
+          .title,
+          .description {
+            text-decoration: underline;
+          }
+        }
+        .buttons {
+          display: flex;
+          align-items: center;
+
+          button {
+            border: none;
+            border-radius: 10px;
+            background-color: #ffd814;
+            height: 30px;
+            width: 30px;
+            box-shadow: 3px 3px 5px -3px rgba(0, 0, 0, 0.75);
+            margin: 0px 5px;
+          }
+          button:hover {
+            background-color: #f7ca01;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    .checkout {
+      margin: 20px;
+      padding-bottom: 10px;
+      border-radius: 15px;
+      text-align: center;
+      background-color: #f7f7f7;
+      h5 {
+        color: grey;
+      }
+      button {
+        border: none;
+        border-radius: 10px;
+        background-color: #ffd814;
+        height: 30px;
+        width: 100px;
+        box-shadow: 3px 3px 5px -3px rgba(0, 0, 0, 0.75);
+        margin: 0px 5px;
+      }
+      button:hover {
+        background-color: #f7ca01;
+        cursor: pointer;
+      }
+    }
+  }
+  .contact {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    form {
+      background-color: #f7f7f7;
+      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+      border-radius: 15px;
+      margin: 20px;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      input {
+        margin: 5px 0;
+      }
+      textarea {
+        margin: 5px 0;
+        resize: none;
+      }
+      button {
+        margin: 5px 0;
+        align-self: center;
+        border: none;
+        border-radius: 25px;
+        background-color: #ffd814;
+        height: 40px;
+        width: 100px;
+        box-shadow: 3px 3px 5px -3px rgba(0, 0, 0, 0.75);
+      }
+      button:hover {
+        background-color: #f7ca01;
+        cursor: pointer;
+      }
+    }
+    .submit-modal {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      z-index: 10;
+      background-color: rgba(0, 0, 0, 0.5);
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-width: 500px;
+        min-height: 150px;
+        background-color: white;
+        border-radius: 15px;
+      }
+    }
+  }
+  .about {
+    flex-grow: 1;
+  }
+  .footer {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px;
+    height: 50px;
+    align-items: center;
+    background-color: #131a22;
+
+    .social-media {
+      display: flex;
+      svg {
+        fill: white;
+        margin: 5px;
+      }
     }
   }
 }
